--- a/src/container/posts/index.less
+++ b/src/container/posts/index.less
@@ -5,8 +5,8 @@ body {
   font-family: 'Roboto','Helvetica','Arial',sans-serif;
   justify-content: space-between;
   margin: 0;
-  max-width: 100%;
-  min-height: 100vh;
+  width: 100%;
+  height: 100vh;
   text-align: center;
 }
 header {
@@ -38,6 +38,61 @@ section {
     padding-top: 10px;
     img {
       max-width: 100%;
+    }
+  }
+}
+.posts {
+  width: 100%;
+  min-height: 500px;
+}
+.post-card {
+  width: 100%;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  .post-pic {
+    width: 220px;
+    height: 150px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  .post-info{
+    width: 100%;
+    text-align: left;
+    display: flex;
+    justify-content: flex-start;
+    height: 100%;
+    flex-direction: column;
+    margin-left: 10px;
+    .name {
+      font-family: PingFangSC-Regular;
+      font-size: 4.26667vw;
+      color: #272727;
+      letter-spacing: 0.48vw;
+      line-height: 5.86667vw;
+      margin-bottom: 2.66667vw;
+      text-overflow: -o-ellipsis-lastline;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+    }
+    .distance, .post-grade {
+      font-family: PingFangSC-Regular;
+      font-size: 3.2vw;
+      color: #6a6a6e;
+      letter-spacing: 1px;
+      line-height: 4.8vw;
+      padding-bottom: 3.2vw;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
   }
 }
